@@ -66,10 +66,11 @@
 ../layout/navigator.inc
 ../layout/navphoto.inc
 ../layout/watermarkform.inc
+../lib/albumItem.php
 ../lib/Form.php
 ../lib/lang.php
+../lib/messages.php
 ../lib/voting.php
-../lib/albumItem.php
 ../lib/valchecks.php
 ../lib/url.php
 ../login.php
