@@ -1,3 +1,15 @@
+2005-06-28 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b45
+
+	* Change: Better Text in edit_appearance.php
+	
+	* Change: Tweaked placeholder replace.
+
+	* Fix: Removed check for number of custom fields, as it has no default.
+
+	* Fix: Added lib/messages.php to list of translateable files.
+
+	* Fix: function for displaying errorRow was broken.
+	
 2005-06-28 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b44
 
 	* Fix: removed some more <> inside a Mail header (see b39)
